--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>UasPtiApi</title>
+  <title>Mapper | Powered by ArcGIS JS API</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <h1>Mapper</h1>
   <app-root></app-root>
+  <footer style="text-align: center;">Mapper 2021 | Powered by ArcGIS | Phantom Assassin Group | UMN</footer>
 </body>
 </html>
