--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <h1>Mapper</h1>
+  <h1 style="text-align: center">Mapper</h1>
   <app-root></app-root>
+  <app-about-us></about-us>
   <footer style="text-align: center;">Mapper 2021 | Powered by ArcGIS | Phantom Assassin Group | UMN</footer>
 </body>
 </html>
